assets/css/_codefences.scss
// syntax highlighting for code blocks
// https://gohugo.io/getting-started/configuration-markup#highlight

/* prettier-ignore */
/* stylelint-disable */
.highlight {
  background-color: #fafafa !important;
  margin-bottom: 0.5rem;
}

.highlight pre {
  margin-bottom: 0 !important;
}

.highlight .hll {
  background-color: #ffc;
}
.highlight .c {
  color: #60a0b0;
  font-style: italic;
  opacity: 0.9;
} /* Comment */
.highlight .err {
  border: 1px solid #f1f1f6;
} /* Error */
.highlight .k {
  color: #50a14f;
  font-weight: bold;
} /* Keyword */
.highlight .o {
  color: #666;
  opacity: 0.8;
} /* Operator */
.highlight .ch {
  color: #60a0b0;
  font-style: italic;
} /* Comment.Hashbang */
.highlight .cm {
  color: #a0a1a7;
  font-style: italic;
} /* Comment.Multiline */
.highlight .cp {
  color: #4078f2;
} /* Comment.Preproc */
.highlight .cpf {
  color: #60a0b0;
  font-style: italic;
} /* Comment.PreprocFile */
.highlight .c1 {
  color: #a0a1a7;
  font-style: italic;
  opacity: 0.7;
} /* Comment.Single */
.highlight .cs {
  color: #60a0b0;
  background-color: #fbf;
} /* Comment.Special */
.highlight .gd {
  color: #a00000;
} /* Generic.Deleted */
.highlight .ge {
  font-style: italic;
} /* Generic.Emph */
.highlight .gr {
  color: #f00;
} /* Generic.Error */
.highlight .gh {
  color: #008;
  font-weight: bold;
} /* Generic.Heading */
.highlight .gi {
  color: #0a0;
} /* Generic.Inserted */
.highlight .go {
  color: #888;
} /* Generic.Output */
.highlight .gp {
  color: #c65d09;
  font-weight: bold;
} /* Generic.Prompt */
.highlight .gs {
  font-weight: bold;
} /* Generic.Strong */
.highlight .gu {
  color: #808;
  font-weight: bold;
} /* Generic.Subheading */
.highlight .gt {
  color: #04d;
} /* Generic.Traceback */
.highlight .kc {
  color: #08b;
  font-weight: bold;
} /* Keyword.Constant */
.highlight .kd {
  color: #a626a4;
  font-weight: bold;
} /* Keyword.Declaration */
.highlight .kn {
  color: #072;
  font-weight: bold;
} /* Keyword.Namespace */
.highlight .kp {
  color: #071;
} /* Keyword.Pseudo */
.highlight .kr {
  color: #a626a4;
  font-weight: bold;
} /* Keyword.Reserved */
.highlight .kt {
  color: #920;
} /* Keyword.Type */
.highlight .m {
  color: #40a070;
} /* Literal.Number */
.highlight .s {
  color: #07a;
} /* Literal.String */
.highlight .na {
  color: rgb(58, 119, 0);
} /* Name.Attribute */
.highlight .nb {
  color: #072;
} /* Name.Builtin */
.highlight .nc {
  color: #0e84b5;
  font-weight: bold;
} /* Name.Class */
.highlight .no {
  color: #6ad;
} /* Name.Constant */
.highlight .nd {
  color: #555;
  font-weight: bold;
} /* Name.Decorator */
.highlight .ni {
  color: #d55537;
  font-weight: bold;
} /* Name.Entity */
.highlight .ne {
  color: #007020;
} /* Name.Exception */
.highlight .nf {
  color: #06287e;
} /* Name.Function */
.highlight .nl {
  color: #002070;
  font-weight: bold;
} /* Name.Label */
.highlight .nn {
  color: #555;
  font-weight: bold;
} /* Name.Namespace */
.highlight .nt {
  color: #e1218c;
  font-weight: bold;
} /* Name.Tag */
.highlight .nv {
  color: #b6d;
} /* Name.Variable */
.highlight .nx {
  color: #383a42;
}
.highlight .ow {
  color: #007020;
  font-weight: bold;
} /* Operator.Word */
.highlight .w {
  color: #bbb;
} /* Text.Whitespace */
.highlight .mb {
  color: #40a070;
} /* Literal.Number.Bin */
.highlight .mf {
  color: #40a070;
} /* Literal.Number.Float */
.highlight .mh {
  color: #40a070;
} /* Literal.Number.Hex */
.highlight .mi {
  color: #961;
} /* Literal.Number.Integer */
.highlight .mo {
  color: #4a0;
} /* Literal.Number.Oct */
.highlight .sa {
  color: #44a;
} /* Literal.String.Affix */
.highlight .sb {
  color: #47a;
} /* Literal.String.Backtick */
.highlight .sc {
  color: #46a;
} /* Literal.String.Char */
.highlight .dl {
  color: #48a;
} /* Literal.String.Delimiter */
.highlight .sd {
  color: #49a;
  font-style: italic;
} /* Literal.String.Doc */
.highlight .s2 {
  color: #5af;
} /* Literal.String.Double */
.highlight .se {
  color: #4070a0;
  font-weight: bold;
} /* Literal.String.Escape */
.highlight .sh {
  color: #4070a0;
} /* Literal.String.Heredoc */
.highlight .si {
  color: #70a0d0;
  font-style: italic;
} /* Literal.String.Interpol */
.highlight .sx {
  color: #c65d09;
} /* Literal.String.Other */
.highlight .sr {
  color: #235388;
} /* Literal.String.Regex */
.highlight .s1 {
  color: #50a14f;
} /* Literal.String.Single */
.highlight .ss {
  color: #517918;
} /* Literal.String.Symbol */
.highlight .bp {
  color: #007020;
} /* Name.Builtin.Pseudo */
.highlight .fm {
  color: #06287e;
} /* Name.Function.Magic */
.highlight .vc {
  color: #b5a;
} /* Name.Variable.Class */
.highlight .vg {
  color: #b6a;
} /* Name.Variable.Global */
.highlight .vi {
  color: #b6d;
} /* Name.Variable.Instance */
.highlight .vm {
  color: #b6c;
} /* Name.Variable.Magic */
.highlight .il {
  color: #40a070;
} /* Literal.Number.Integer.Long */
.highlight .p {
  opacity: 0.6;
}

